--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
-  "name": "simple-nodejs-api",
+  "name": "my-puppeteer-project",
   "version": "1.0.0",
-  "description": "my first api with nodejs",
   "main": "index.js",
-  "type": "module",
   "scripts": {
+    "start": "node index.js"
     "dev": "nodemon index.js"
   },
-  "keywords": [
-    "node",
-    "js"
-  ],
-  "author": "monkeywit",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "express": "^4.17.1",
+    "puppeteer": "^22.13.0",
+    "cors": "^2.8.5"
   }
 }
+
